Fixed weekday coloring on IE.

--- a/frontend/src/sass/screen.scss
+++ b/frontend/src/sass/screen.scss
@@ -722,6 +722,14 @@ $navbar_height: 53px;
         }
     }
 
+    .Mon { background: #1A3E50;}
+    .Tue { background: #22546C; }
+    .Wed { background: #2B6A88; }
+    .Thu { background: #3380A4; }
+    .Fri { background: #3A95C1; }
+    .Sat { background: #54A5CC; }
+    .Sun { background: #6FB4D5; }
+
     .pagination {
         margin: 0 0 1em 0;
     }
